--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 <form id="analysisForm">
 
   <fieldset>
-    <legend>Content Analysis Options:</legend>
+    <legend>Add content you want to analyze:</legend>
 
     <!-- Option 1: URL Input -->
     <label for="urlInput">Enter URL:</label>
